2020-01-22 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_bulb.c: Revise geda_bulb_draw_indicator to handle
      the case when GSEAL_ENABLE is defined by utilizing macros, specifically
      geda_get_widget_style and geda_get_widget_window.

2020-01-21 Wiley E. Hill <wileyhill@gmail.com>

    * include/geda_gtk_compat.h: Add macro geda_get_widget_style to handle
      the case when GSEAL_ENABLE is defined.

    * src/widgets/geda_bulb.c: Revise geda_bulb_draw_indicator to not
      bother checking and setting state_type to GTK_STATE_ACTIVE or
      GTK_STATE_PRELIGHT since alpha is only varied if state_type is
      GTK_STATE_INSENSITIVE. Revise geda_bulb_instance_init to utilize
      g_object_set to set the "border_width" property.

    * src/widgets/geda_check_menu_item.c Add x_thickness and revise
      geda_real_check_menu_item_draw_indicator to compile when GSEAL_ENABLE.

    * src/widgets/geda_combobox.c: Add ancillary parent and utilize
      geda_get_widget_parent macro in geda_combo_box_add, comment out
      old hack to set GtkEntry->is_cell_renderer, which does not appear
      to have any impact on the allocation.

2020-01-20 Wiley E. Hill <wileyhill@gmail.com>

    * include/: Reluctantly include all of gtk.h:

          * include/geda_dockbox.h
          * include/geda_font_button.h

    * src/widgets/geda_bulb.c: Revise geda_bulb_clicked to set new_state
      to GTK_STATE_ACTIVE when GSEAL_ENABLE is defined, Eliminate pointer
      to GtkButton, and utilize macros:

          * geda_get_container_border_width
          * geda_toggle_button_get_active
          * geda_toggle_button_set_active

    * src/widgets/geda_check_menu_item.c: Utilize geda_get_widget_window
      unsigned border_width in geda_real_check_menu_item_draw_indicator.

2020-01-16 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_accel_label.c: Revise geda_accel_label_expose_event to